--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <a href="#contact">Contact</a>
     </div>
     <div class="content">
-        <h1>Welcome to My Website</h1>
+        <h1>Welcome to My Website huzaifa</h1>
         <p>This is a simple website with a navigation bar and some basic content.</p>
     </div>
     <div class="footer">
